增加前端排序动画
删除冗余代码

--- a/Application/Home/View/Funds/index.html
+++ b/Application/Home/View/Funds/index.html
@@ -79,11 +79,9 @@
         var sortable = Sortable.create(el, {
             handle: ".sortEnable",
             ghostClass: "am-active",
+            animation: 200,
             onMove: function (evt) {
                 return evt.related.dataset.id !== "-1";
-            },
-            onUpdate: function (evt) {
-                
             },
         });
         if (sortable) {
