移除输入框最大字符数量限制

--- a/Application/Home/View/Login/index.html
+++ b/Application/Home/View/Login/index.html
@@ -10,13 +10,13 @@
             <div class="am-form-group">
               <label for="login_username">账号</label>
               <input type="text" class="" name="login_username" placeholder="输入用户名" 
-                minlength="2" maxlength="16" required/>
+                minlength="2" required/>
             </div>
         
             <div class="am-form-group">
               <label for="login_password">密码</label>
               <input type="password" class="" name="login_password" placeholder="输入密码" 
-                minlength="4" maxlength="24" required/>
+                minlength="6" required/>
             </div>
             
             <p><input type="submit" class="am-btn am-btn-secondary am-btn-block am-radius" name="login_submit" value="登录"></p>
