增加底部菜单栏高度

--- a/Application/Home/View/Public/bars.html
+++ b/Application/Home/View/Public/bars.html
@@ -1,5 +1,4 @@
-  <div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default " 
-      id="">
+  <div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default" style="height: 60px;    line-height: 60px;">
       <ul class="am-navbar-nav am-cf am-avg-sm-4" style="background-color:#19a7f0">
           <li >
             <a href="__APP__/Home/Index/index" class="">
