调整底部菜单栏高度

--- a/Application/Home/View/Login/index.html
+++ b/Application/Home/View/Login/index.html
@@ -29,7 +29,7 @@
         </form>
     </div>
 
-    <div style="position:fixed; bottom:0; width:100%; line-height:200%; background-color: #fff; z-index: -1;">
+    <div style="position:fixed; bottom:10px; width:100%; line-height:200%; background-color: #fff; z-index: -1;">
       <div class="am-text-center am-text-secondary am-text-sm">
         <a href="__APP__/Home/Login/regist">注册账号</a>
         &nbsp;|&nbsp;
