修复日历框UI错位的BUG

--- a/Application/Home/View/Find/index.html
+++ b/Application/Home/View/Find/index.html
@@ -32,19 +32,19 @@
         <div><p></p></div>
         <div class="am-input-group">
             <span class="am-input-group-label"><b>选择分类</b></span>
-            <select id="select-class" class="am-form-field" name="find_class">
+            <select id="select-class" class="am-form-field" name="find_class" >
                 <option value="">全部</option>
             </select>
         </div>
         <div><p></p></div>
         <div class="am-input-group">
             <span class="am-input-group-label"><b>起始时间</b></span>
-            <input type="date" class="am-form-field" id="text-start-time" name="find_start_time" value="{$FindData.starttime}" />
+            <input type="date" class="am-form-field" id="text-start-time" name="find_start_time" value="{$FindData.starttime}" style="height: auto;" />
         </div>
         <div><p></p></div>
         <div class="am-input-group">
             <span class="am-input-group-label"><b>终止时间</b></span>
-            <input type="date" class="am-form-field" id="text-end-time" name="find_end_time"  value="{$FindData.endtime}" />
+            <input type="date" class="am-form-field" id="text-end-time" name="find_end_time"  value="{$FindData.endtime}" style="height: auto;" />
         </div>
         <div><p></p></div>
         <div class="am-input-group">
