修复错误显示转账

--- a/Application/Home/View/Find/index.html
+++ b/Application/Home/View/Find/index.html
@@ -101,6 +101,7 @@
         });
         if ("{$FindData.fid}" != "") {
             $("#select-funds").val("{$FindData.fid}");
+            $('#select-funds').trigger("change");
         }
         if ("{$FindDataType}" != "") {
             $("#select-type").val("{$FindDataType}");
