优化日期选择框高度

--- a/Public/Home/css/app.css
+++ b/Public/Home/css/app.css
@@ -1,1 +1,7 @@
 /* Write your styles */
+.am-form input[type="datetime-local"],
+.am-form input[type="date"],
+input[type="datetime-local"].am-form-field,
+input[type="date"].am-form-field {
+  height: 38px;
+}
