--- a/Application/Home/View/Find/index.html
+++ b/Application/Home/View/Find/index.html
@@ -39,12 +39,12 @@
         <div><p></p></div>
         <div class="am-input-group">
             <span class="am-input-group-label"><b>起始时间</b></span>
-            <input type="date" class="am-form-field" id="text-start-time" name="find_start_time" value="{$FindData.starttime}" style="height: auto;" />
+            <input type="date" class="am-form-field" id="text-start-time" name="find_start_time" value="{$FindData.starttime}" />
         </div>
         <div><p></p></div>
         <div class="am-input-group">
             <span class="am-input-group-label"><b>终止时间</b></span>
-            <input type="date" class="am-form-field" id="text-end-time" name="find_end_time"  value="{$FindData.endtime}" style="height: auto;" />
+            <input type="date" class="am-form-field" id="text-end-time" name="find_end_time"  value="{$FindData.endtime}" />
         </div>
         <div><p></p></div>
         <div class="am-input-group">
