修复日历选择框高度异常的BUG

--- a/Application/Home/View/Edit/transfer.html
+++ b/Application/Home/View/Edit/transfer.html
@@ -70,7 +70,7 @@
                 <div><p></p></div>
                 <div class="am-input-group">
                     <span class="am-input-group-label"><b>转账时间</b></span>
-                    <input type="date" class="am-form-field" id="text-time" name="transfer_time" value="<php>echo date('Y-m-d',$TransferData['time']);</php>" style="height: auto;" />
+                    <input type="date" class="am-form-field" id="text-time" name="transfer_time" value="<php>echo date('Y-m-d',$TransferData['time']);</php>" />
                 </div>
 
                 <p><hr data-am-widget="divider" style="" class="am-divider am-divider-dashed" /></p>
